--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <a id="tweet-quote" target="_blank" href="twitter.com/intent/tweet">Twitter</a>
         <button id="new-quote">New quote</button>
     </div>
+    <script src="./app.js"></script>
 </body>
 </html>
